--- a/_sources/week6/tutorial1.ipynb
+++ b/_sources/week6/tutorial1.ipynb
@@ -114,11 +114,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kTEyjbOh6-9L"
+      },
+      "outputs": [],
+      "source": [
+        "!pip install geopandas\n",
+        "!pip install matplotlib"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "aQLuc04_6-9M"
       },
       "source": [
+        "As you may or may not have seen while installing, there was a warning that we need to restart our runtime. To do so, click on **Runtime** in the topbar menu and click on **Runtime opnieuw starten**/**Restart runtime**.\n",
+        "\n",
         "Now we will import these packages in the cell below:"
       ]
     },
@@ -1012,7 +1026,7 @@
       },
       "outputs": [],
       "source": [
-        "word_tokens = word_tokenize(XXXX) # Change the XXXX for the sentence you want to tokenize"
+        "word_tokens = word_tokenize(XXXX) # Change the XXXX for the corpus you want to tokenize"
       ]
     },
     {
@@ -1095,7 +1109,7 @@
         "id": "Hzg0fvnQfcE4"
       },
       "source": [
-        "In this section, you have the opportunity to choose between lemmatization and stemming to reduce words to their base form. You can use the example code from section 3.6 to perform the selected method on the data."
+        "In steps 1 to 4, we've progressed from the corpus to our filtered sentence. Now, it's time to decide on a method for reducing words. You have the option to choose between lemmatization and stemming to simplify words to their base form. Feel free to utilize the example code from section 3.6 to apply your chosen method to the filtered sentence obtained in our previous step (Step 4)"
       ]
     },
     {
