--- a/week6/tutorial1.ipynb
+++ b/week6/tutorial1.ipynb
@@ -105,24 +105,10 @@
         "\n",
         "[**Pandas**](https://pandas.pydata.org/docs/) is an open source, BSD-licensed library providing high-performance, easy-to-use data structures and data analysis tools for the Python programming language.\n",
         "\n",
-        "[**tweepy**](https://www.tweepy.org/) is an easy-to-use Python library for accessing the Twitter API.\n",
-        "\n",
         "[**wordcloud**](https://pypi.org/project/wordcloud/) is a little word cloud generator in Python.\n",
         "\n",
         "\n",
         "*We will first need to install these packages in the cell below. Uncomment them to make sure we can pip install them*"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "kTEyjbOh6-9L"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install geopandas\n",
-        "!pip install matplotlib"
       ]
     },
     {
@@ -131,8 +117,6 @@
         "id": "aQLuc04_6-9M"
       },
       "source": [
-        "As you may or may not have seen while installing, there was a warning that we need to restart our runtime. To do so, click on **Runtime** in the topbar menu and click on **Runtime opnieuw starten**/**Restart runtime**.\n",
-        "\n",
         "Now we will import these packages in the cell below:"
       ]
     },
@@ -150,21 +134,18 @@
         "import pandas as pd\n",
         "from datetime import datetime, date\n",
         "import geopandas as gpd\n",
-        "import tweepy\n",
         "import json\n",
         "import os\n",
         "import sys\n",
         "\n",
         "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
         "\n",
-        "#NEW\n",
-        "from wordcloud import WordCloud, ImageColorGenerator\n",
+        "from wordcloud import WordCloud\n",
         "from PIL import Image\n",
         "import nltk\n",
         "from nltk.corpus import stopwords\n",
         "from nltk.tokenize import word_tokenize, RegexpTokenizer\n",
         "from nltk.stem import WordNetLemmatizer, PorterStemmer\n",
-        "import string\n",
         "\n",
         "%matplotlib inline"
       ]
