--- a/_sources/week6/tutorial1.ipynb
+++ b/_sources/week6/tutorial1.ipynb
@@ -105,10 +105,7 @@
         "\n",
         "[**Pandas**](https://pandas.pydata.org/docs/) is an open source, BSD-licensed library providing high-performance, easy-to-use data structures and data analysis tools for the Python programming language.\n",
         "\n",
-        "[**wordcloud**](https://pypi.org/project/wordcloud/) is a little word cloud generator in Python.\n",
-        "\n",
-        "\n",
-        "*We will first need to install these packages in the cell below. Uncomment them to make sure we can pip install them*"
+        "[**wordcloud**](https://pypi.org/project/wordcloud/) is a little word cloud generator in Python."
       ]
     },
     {
