--- a/_sources/week6/tutorial2.ipynb
+++ b/_sources/week6/tutorial2.ipynb
@@ -107,12 +107,12 @@
    "outputs": [],
    "source": [
     "import flickrapi\n",
-    "import pygeos\n",
     "import pandas as pd\n",
     "import contextily as cx\n",
     "import geopandas as gpd\n",
     "import osmnx as ox\n",
     "import numpy as np\n",
+    "import shapely \n",
     "\n",
     "from sklearn.cluster import DBSCAN\n",
     "from datetime import datetime"
@@ -219,19 +219,10 @@
     "ax.set_xticks([])\n",
     "ax.set_yticks([])\n",
     "ax.set_axis_off()\n",
-    "cx.add_basemap(ax, zoom=12) #depending on the size of your area, you may need to change the zoom level if you run into an error.\n",
+    "cx.add_basemap(ax, zoom=11) #depending on the size of your area, you may need to change the zoom level if you run into an error.\n",
     "size = int(area_to_check.area/1e6)\n",
     "\n",
     "ax.set_title(\"{}. Total area: {} km2\".format(place_name,size),fontweight='bold')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 1:</b> Provide the plot of your chosen area.\n",
-    "</div>"
    ]
   },
   {
@@ -392,7 +383,7 @@
     "Aha! Strings. It will be difficult to convert strings into proper geometries, so let's convert these columns to floating values, and convert them to **points** using `pygeos.points()`. As you will see, we use a [list comprehension](https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions) to do so. The input for `pygeos.points()` is a list or numpy array, in which each element contains a *longitude* and a *latitude*. To make sure we have that, we create this `list` using the [zip](https://docs.python.org/3.3/library/functions.html#zip) function in Python.\n",
     "\n",
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 2:</b> As all the data is stored in strings, its pretty difficult to do something with the information straight away. Please provide the lines of code that you have written to convert the geo-information (lattitude and longitude) into actual coordinates and also provide the lines of code that you have written to convert the dates to a datetime object. Explain the lines of code.\n",
+    "<b>Question 1:</b> As all the data is stored in strings, its pretty difficult to do something with the information straight away. Please provide the lines of code that you have written to convert the geo-information (lattitude and longitude) into actual coordinates and also provide the lines of code that you have written to convert the dates to a datetime object. Explain the lines of code.\n",
     "</div>\n"
    ]
   },
@@ -404,7 +395,7 @@
    "source": [
     "df['longitude'] = df['longitude'].astype(\n",
     "df['latitude'] = df['latitude'].\n",
-    "df['geometry'] = [pygeos.points(x[0],x[1]) for x in list(zip(df['longitude'],df['latitude']))]"
+    "df['geometry'] = [shapely.points(x[0],x[1]) for x in list(zip(df['longitude'],df['latitude']))]"
    ]
   },
   {
@@ -745,7 +736,7 @@
    },
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 3:</b> Upload the map with locations of all the photos taken in your area.\n",
+    "<b>Question 2:</b> Upload the map with locations of all the photos taken in your area.\n",
     "</div>"
    ]
   },
@@ -754,7 +745,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 4:</b> Describe the plot of the amount of photos over per year (or per month) and the map. Do you already notice specific patterns. Is there something already that may influence our results later on?\n",
+    "<b>Question 3:</b> Describe the plot of the amount of photos over per year (or per month) and the map. Do you already notice specific patterns. Is there something already that may influence our results later on?\n",
     "</div>"
    ]
   },
@@ -830,7 +821,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 5:</b> What are the most important tags in your dataset? Also provide the list of tags that you have used to select photos that show nature on the photo. How many pictures did you end up with?\n",
+    "<b>Question 4:</b> What are the most important tags in your dataset? Also provide the list of tags that you have used to select photos that show nature on the photo. How many pictures did you end up with?\n",
     "</div>"
    ]
   },
@@ -942,7 +933,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 6:</b> Please provide the lines of code that you have written to reduce the potential double-counting of the same user on the same location.\n",
+    "<b>Question 5:</b> Please provide the lines of code that you have written to reduce the potential double-counting of the same user on the same location.\n",
     "</div>\n"
    ]
   },
@@ -988,8 +979,8 @@
     "    \"\"\"    \n",
     "\n",
     "    # set xmin,ymin,xmax,and ymax of the grid\n",
-    "    xmin, ymin = pygeos.total_bounds(bbox)[0],pygeos.total_bounds(bbox)[1]\n",
-    "    xmax, ymax = pygeos.total_bounds(bbox)[2],pygeos.total_bounds(bbox)[3]\n",
+    "    xmin, ymin = shapely.total_bounds(bbox)[0],shapely.total_bounds(bbox)[1]\n",
+    "    xmax, ymax = shapely.total_bounds(bbox)[2],shapely.total_bounds(bbox)[3]\n",
     "    \n",
     "    #estimate total rows and columns\n",
     "    rows = int(np.ceil((ymax-ymin) / height))\n",
@@ -1016,7 +1007,7 @@
     "        x_left_origin = x_left_origin + height\n",
     "        x_right_origin = x_right_origin + height\n",
     "\n",
-    "    return pygeos.polygons(res_geoms)"
+    "    return shapely.polygons(res_geoms)"
    ]
   },
   {
@@ -1032,7 +1023,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = pd.DataFrame(create_grid(pygeos.from_shapely(area.geometry),XXXX),columns=['geometry'])"
+    "grid = pd.DataFrame(create_grid(area.geometry,XXXX),columns=['geometry'])"
    ]
   },
   {
@@ -1084,7 +1075,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree = pygeos.STRtree(pygeos.from_shapely(gdf_unique.loc[gdf_unique.nature=='yes'].geometry))"
+    "tree = shapely.STRtree(gdf_unique.loc[gdf_unique.nature=='yes'].geometry)"
    ]
   },
   {
@@ -1100,7 +1091,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid['nature'] = grid.geometry.apply(lambda x: len(tree.query(pygeos.from_shapely(x),predicate='contains_properly')))"
+    "grid['nature'] = grid.geometry.apply(lambda x: len(tree.query(x,predicate='contains_properly')))"
    ]
   },
   {
@@ -1133,7 +1124,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 7:</b> Describe the results of the \"clustering\" through using the grid-based approach. Are you already able to identify some areas that seem to be most preferred? Can you identify them by using, for example, Google Maps? Does it surprise you?\n",
+    "<b>Question 6:</b> Describe the results of the \"clustering\" through using the grid-based approach. Are you already able to identify some areas that seem to be most preferred? Can you identify them by using, for example, Google Maps? Does it surprise you?\n",
     "</div>"
    ]
   },
@@ -1194,7 +1185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster_gdf = gpd.GeoDataFrame(clusters.apply(lambda x : pygeos.convex_hull(pygeos.multipoints(np.flip(x,axis=1)))),columns=['geometry'])\n",
+    "cluster_gdf = gpd.GeoDataFrame(clusters.apply(lambda x : shapely.convex_hull(shapely.multipoints(np.flip(x,axis=1)))),columns=['geometry'])\n",
     "cluster_gdf['cluster_size'] = clusters.apply(lambda x : len(x))\n",
     "cluster_gdf.geometry = cluster_gdf.buffer(100)"
    ]
@@ -1230,7 +1221,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 8:</b> Upload the map with the results of your DBSCAN clustering.\n",
+    "<b>Question 7:</b> Upload the map with the results of your DBSCAN clustering.\n",
     "</div>"
    ]
   },
@@ -1239,7 +1230,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 9:</b> Describe the outcome of your DBSCAN clustering approach. Which parameter settings did you use? What did you choose for epsilon and which value did you choose as the minimum number of clusters? How do the results differ/to what extent are they the same as the grid-based approach? \n",
+    "<b>Question 8:</b> Describe the outcome of your DBSCAN clustering approach. Which parameter settings did you use? What did you choose for epsilon and which value did you choose as the minimum number of clusters? How do the results differ/to what extent are they the same as the grid-based approach? \n",
     "</div>"
    ]
   },
@@ -1267,7 +1258,7 @@
    "outputs": [],
    "source": [
     "tags = {'landuse': True, 'natural': True}   \n",
-    "landuse = ox.geometries_from_place(place_name, tags)"
+    "landuse = ox.features_from_place(place_name, tags)"
    ]
   },
   {
@@ -1328,7 +1319,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 10:</b> Provide the list of unique natural area classifications within the OpenStreetMap data and provide the lines of code that you have written to make sure that all of them were included in the landuse column.\n",
+    "<b>Question 9:</b> Provide the list of unique natural area classifications within the OpenStreetMap data and provide the lines of code that you have written to make sure that all of them were included in the landuse column.\n",
     "</div>"
    ]
   },
@@ -1371,7 +1362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree_landuse = pygeos.STRtree(pygeos.from_shapely(landuse.geometry))"
+    "tree_landuse = shapely.STRtree(landuse.geometry)"
    ]
   },
   {
@@ -1389,7 +1380,7 @@
    "source": [
     "def find_landuse(row,tree,landuse):\n",
     "    \n",
-    "    intersect = (tree_landuse.query(pygeos.from_shapely(row),predicate='intersects'))\n",
+    "    intersect = (tree.query(row,predicate='intersects'))\n",
     "    \n",
     "    if len(intersect) == 0:\n",
     "        return 'water'\n",
@@ -1403,7 +1394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid['landuse'] = grid.geometry.apply(lambda x: find_landuse(x,tree,landuse))"
+    "grid['landuse'] = grid.geometry.apply(lambda x: find_landuse(x,tree_landuse,landuse))"
    ]
   },
   {
@@ -1430,16 +1421,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 11:</b> Upload the figure with the outcome of the overlay between OpenStreetMap and the Flickr Data. \n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-success\">\n",
-    "<b>Question 12:</b> Describe the results of the overlay between OpenStreetMap and Flickr data. Does it surprise you? Is it in line to what you observed from the previous grid-based clustering and the DBSCAN clustering? \n",
+    "<b>Question 10:</b> Describe the results of the overlay between OpenStreetMap and Flickr data. Does it surprise you? Is it in line to what you observed from the previous grid-based clustering and the DBSCAN clustering? \n",
     "</div>"
    ]
   },
